@@ -1,3 +1,8 @@
+2019-10-07  Enrico Schumann  <es@enricoschumann.net>
+
+	* R/plotseries.R (plotseries): decrease
+	'labels.cex' to 0.7; add argument 'series.type'
+
 2019-09-19  Enrico Schumann  <es@enricoschumann.net>
 
         * DESCRIPTION (Version): 0.1-0
